[tool.poetry]
name = "powermon"
version = "1.0.18"
description = "Package to communicate with Solar inverters and BMSs"
authors = ["John Blance"]
readme = "README.md"
packages = [
    {include = "powermon"},
    {include = "api"},
    {include = "powermon_api"},
]
include = ["*.mo"]
repository = "https://github.com/jblance/powermon"
documentation = "https://jblance.github.io/powermon/index.html"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jblance/powermon/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
paho-mqtt = ">=1.6,<2.0.0"
pyserial = ">3"
pydantic = ">=1.8.0"
PyYAML = { version = ">=6", optional = false }
pyaml-env = { version = "^1.2.1", optional = false }
construct = { version = "^2.10.70", optional = false }

# ble dependencies
bleak = { version = ">=0.21.1", optional = true }
pycryptodome = { version = "^3.20.0", optional = true }

# systemd daemon dependencies
cysystemd = { version = ">=1.6.0", optional = true }

# api dependencies
fastapi = { version = ">=0.68.0", optional = true }
fastapi-mqtt = { version = ">=1.1", optional = true }
jinja2 = { version = "^3.1.3", optional = true }
requests = { version = ">=2.31.0", optional = true }
sqlalchemy = { version = "^2.0.15", optional = true }
uvicorn = { version = ">=0.15.0", optional = true }

# dev dependencies
#twine = { version = "^4.0.2", optional = true }
sphinx = { version = "^8.0.2", optional = true }
autodocsumm = {version = "^0.2.13", optional = true}
sphinx-press-theme = {version = "^0.9.1", optional = true}
# flake8 = { version = "^6.0.0", optional = true }
# black = { version = "^23.3.0", optional = true }
# coverage = { version = "^7.2.5", optional = true }

# modbus dependencies
pymodbus = { version = "^3.6.4", optional = true }
dateparser = "^1.2.0"
tenacity = "^9.0.0"
ruamel-yaml = "^0.18.6"
deepdiff = "^8.0.1"

[tool.poetry.extras]
api = ["fastapi", "fastapi-mqtt", "jinja2", "requests", "sqlalchemy", "uvicorn"]
ble = ["bleak", "pycryptodome"]
dev = ["sphinx", "autodocsumm", "sphinx-press-theme", "bleak", "pycryptodome"]
modbus = ["pymodbus"]
systemd = ["cysystemd"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
powermon = "powermon.runner:main"
powermon-api = "powermon_api.api:main"
powermon-cli = "powermon.cli:main"

[tool.black]
line-length = 149
