[project]
name = "powermon"
version = "1.0.19"
description = "Package to communicate with Solar inverters and BMSs"
readme = "README.md"

authors = [
    {name = "John Blance"},
]
requires-python = "<3.13,>=3.11"
dependencies = [
    "paho-mqtt<2.0.0,>=1.6",
    "pyserial>3",
    "pydantic>=1.8.0",
    "PyYAML>=6",
    "pyaml-env<2.0.0,>=1.2.1",
    "construct<3.0.0,>=2.10.70",
    "dateparser<2.0.0,>=1.2.0",
    "tenacity<10.0.0,>=9.0.0",
    "ruamel-yaml<1.0.0,>=0.18.6",
    "deepdiff<9.0.0,>=8.0.1",
    "rich<14.0.0,>=13.9.4",
]

[project.urls]
"Bug Tracker" = "https://github.com/jblance/powermon/issues"
repository = "https://github.com/jblance/powermon"
documentation = "https://jblance.github.io/powermon/index.html"

[project.optional-dependencies]
ble = [
    "bleak>=0.21.1",
    "pycryptodome<4.0.0,>=3.20.0",
]
systemd = [
    "cysystemd>=1.6.0",
]
api = [
    "fastapi>=0.68.0",
    "fastapi-mqtt>=1.1",
    "jinja2<4.0.0,>=3.1.3",
    "requests>=2.31.0",
    "sqlalchemy<3.0.0,>=2.0.15",
    "uvicorn>=0.15.0",
]
dev = [
    "sphinx<9.0.0,>=8.0.2",
    "autodocsumm<1.0.0,>=0.2.13",
    "sphinx-press-theme<1.0.0,>=0.9.1",
    "sphinxcontrib-mermaid<2.0.0,>=1.0.0",
]
modbus = [
    "pymodbus<4.0.0,>=3.6.4",
]

[project.scripts]
powermon = "powermon.powermon:main"
powermon-api = "powermon_api.api:main"
powermon-cli = "powermon.cli:main"

[tool.pdm.build]
includes = ["powermon", "api", "powermon_api", "*.mo"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 149

