[project]
name = "powermon"
version = "1.0.19"
description = "Package to communicate with Solar inverters and BMSs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "John Blance"},
]
requires-python = ">=3.11,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "paho-mqtt>=1.6,<2.0.0",
    "pyserial>=3.5,<4.0.0",
    "pydantic>=1.10,<2.0.0",
    "PyYAML>=6.0,<7.0",
    "pyaml-env<2.0.0,>=1.2.1",
    "construct<3.0.0,>=2.10.70",
    "dateparser<2.0.0,>=1.2.0",
    "tenacity<10.0.0,>=9.0.0",
    "ruamel-yaml<1.0.0,>=0.18.6",
    "deepdiff<9.0.0,>=8.0.1",
    "rich<14.0.0,>=13.9.4",
]

[project.urls]
"Bug Tracker" = "https://github.com/jblance/powermon/issues"
repository = "https://github.com/jblance/powermon"
documentation = "https://jblance.github.io/powermon/index.html"

[project.optional-dependencies]
ble = [
    "bleak>=0.21.1",
    "pycryptodome<4.0.0,>=3.20.0",
]
systemd = [
    "cysystemd>=1.6.0",
]
api = [
    "fastapi>=0.68.0",
    "fastapi-mqtt>=1.1",
    "jinja2<4.0.0,>=3.1.3",
    "requests>=2.31.0",
    "sqlalchemy<3.0.0,>=2.0.15",
    "uvicorn>=0.15.0",
]
modbus = [
    "pymodbus<4.0.0,>=3.6.4",
]

[project.scripts]
powermon = "powermon.powermon:main"
powermon-api = "powermon_api.api:main"
powermon-cli = "powermon.cli:main"

[tool.pdm.build]
includes = ["powermon", "powermon_api", "*.mo"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
    "ruff>=0.15.9",
    "zensical>=0.0.32",
]

[tool.black]
line-length = 149
target-version = ["py312"]

